@@ -3,9 +3,8 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
- *
+ * SPDX-License-Identifier: MPL-2.0
  */
-
 package com.powsybl.metrix.mapping.timeseries;
 
 import com.powsybl.commons.PowsyblException;
@@ -18,10 +17,14 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.time.ZoneId;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static com.powsybl.metrix.mapping.timeseries.TimeSeriesStoreUtil.isNotVersioned;
+import static com.powsybl.timeseries.TimeSeries.DEFAULT_VERSION_NUMBER_FOR_UNVERSIONED_TIMESERIES;
 
 public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
 
@@ -74,9 +77,8 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
     public Set<Integer> getTimeSeriesDataVersions() {
         return Stream
             .concat(stringTimeSeries.values().stream(), doubleTimeSeries.values().stream())
-            .findFirst()
-            .map(Map::keySet)
-            .orElse(Collections.emptySet());
+            .flatMap(values -> values.keySet().stream())
+            .collect(Collectors.toSet());
     }
 
     @Override
@@ -84,10 +86,8 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
         return Stream
             .concat(stringTimeSeries.entrySet().stream(), doubleTimeSeries.entrySet().stream())
             .filter(timeSeries -> timeSeriesName.equals(timeSeries.getKey()))
-            .map(Map.Entry::getValue)
-            .map(Map::keySet)
-            .findFirst()
-            .orElse(Collections.emptySet());
+            .flatMap(timeSeries -> timeSeries.getValue().keySet().stream())
+            .collect(Collectors.toSet());
     }
 
     @Override
@@ -123,14 +123,28 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
         return getTimeSeries(stringTimeSeries, StringTimeSeries.class, timeSeriesNames, version);
     }
 
+    /**
+     * Returns the stored version number of the timeSeriesName depending on if the timeSeriesName is versioned or not
+     */
+    private int getTimeSeriesStoredVersion(String timeSeriesName, int version) {
+        return isNotVersioned(getTimeSeriesDataVersions(timeSeriesName)) ? DEFAULT_VERSION_NUMBER_FOR_UNVERSIONED_TIMESERIES : version;
+    }
+
+    /**
+     * Returns TimeSeries of the timeSeriesName depending on if the timeSeriesName is versioned or not
+     */
+    private TimeSeries getTimeSeries(String timeSeriesName, Map<Integer, TimeSeries> timeSeriesPerVersion, int version) {
+        int storedVersion = getTimeSeriesStoredVersion(timeSeriesName, version);
+        return timeSeriesPerVersion.get(storedVersion);
+    }
+
     private <T extends TimeSeries> List<T> getTimeSeries(Map<String, Map<Integer, TimeSeries>> timeSeriesList, Class<T> timeSeriesTypeClass, Set<String> timeSeriesNames, int version) {
         return timeSeriesList.entrySet().stream()
             .filter(timeSeries -> timeSeriesNames.contains(timeSeries.getKey()))
-            .map(Map.Entry::getValue)
-            .map(timeSeriesVersions -> timeSeriesVersions.get(version))
+            .map(timeSeries -> getTimeSeries(timeSeries.getKey(), timeSeries.getValue(), version))
             .filter(Objects::nonNull)
             .map(timeSeriesTypeClass::cast)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     @Override
@@ -144,7 +158,8 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
     }
 
     public void importTimeSeries(BufferedReader reader) {
-        Map<Integer, List<TimeSeries>> timeSeries = TimeSeries.parseCsv(reader, new TimeSeriesCsvConfig(), ReportNode.NO_OP);
+        TimeSeriesCsvConfig config = new TimeSeriesCsvConfig(ZoneId.systemDefault(), ';', true, TimeSeries.TimeFormat.DATE_TIME, 20000, false);
+        Map<Integer, List<TimeSeries>> timeSeries = TimeSeries.parseCsv(reader, config, ReportNode.NO_OP);
         HashMap<TimeSeriesDataType, HashMap<String, Map<Integer, TimeSeries>>> tsByType = timeSeries.entrySet().stream()
             .flatMap(tsVersionEntry ->
                 tsVersionEntry.getValue().stream().map(tsVersion -> Pair.of(tsVersion, tsVersionEntry.getKey()))
